[gd_scene load_steps=12 format=3 uid="uid://qnvyv3a0mthy"]

[ext_resource type="Script" path="res://systems/shop/shop.gd" id="1_x604k"]
[ext_resource type="PackedScene" uid="uid://dppjchrp5io0f" path="res://systems/pet/pet.tscn" id="2_bmkpa"]
[ext_resource type="PackedScene" uid="uid://dut2fm7cqngup" path="res://systems/misc/clickable/clickable_tab_item.tscn" id="3_i7p62"]
[ext_resource type="Script" path="res://systems/shop/show_items_shop.gd" id="4_63lq5"]
[ext_resource type="Texture2D" uid="uid://dm8wxesvh5t8p" path="res://assets/customize/icons.png" id="5_3lp73"]
[ext_resource type="PackedScene" uid="uid://dq5jw5oofwekp" path="res://systems/misc/clickable/change_scene/clickable_change_scene.tscn" id="5_b38ie"]
[ext_resource type="Script" path="res://systems/shop/Buy_Modal.gd" id="6_iw5rd"]
[ext_resource type="PackedScene" uid="uid://ka6f2ksq5rlp" path="res://systems/misc/display_money/money.tscn" id="8_5gl6u"]
[ext_resource type="Texture2D" uid="uid://cnltgiwq825d2" path="res://assets/universal/back_icon.png" id="9_q71ul"]
[ext_resource type="Theme" uid="uid://dent1p17y64cs" path="res://assets/themes/customize_theme.tres" id="10_44y3j"]
[ext_resource type="Theme" uid="uid://bywvvpuodhlu0" path="res://assets/themes/universal_theme.tres" id="10_hjout"]

[node name="Shop" type="Node2D"]
script = ExtResource("1_x604k")

[node name="Pet" parent="." instance=ExtResource("2_bmkpa")]
position = Vector2(296, 636)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 540.0
offset_bottom = 960.0

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -270.0
offset_top = -480.0
offset_right = 270.0
offset_bottom = 480.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.352941, 0.796078, 1)

[node name="Picker" type="Control" parent="Control"]
layout_mode = 1
anchor_left = 0.153
anchor_top = 0.049
anchor_right = 0.847
anchor_bottom = 0.295
offset_left = -38.62
offset_top = -5.04
offset_right = 38.62
offset_bottom = 114.8
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Picker"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -216.5
offset_right = 236.5
offset_bottom = 64.0
grow_horizontal = 2

[node name="Tab_Bodies" parent="Control/Picker/HBoxContainer" instance=ExtResource("3_i7p62")]
custom_minimum_size = Vector2(80, 64)
layout_mode = 2
theme = ExtResource("10_44y3j")

[node name="Icon" type="Sprite2D" parent="Control/Picker/HBoxContainer/Tab_Bodies"]
position = Vector2(40, 32)
scale = Vector2(3, 3)
texture = ExtResource("5_3lp73")
hframes = 5

[node name="Tab_Eyes" parent="Control/Picker/HBoxContainer" instance=ExtResource("3_i7p62")]
custom_minimum_size = Vector2(80, 64)
layout_mode = 2
theme = ExtResource("10_44y3j")

[node name="Icon2" type="Sprite2D" parent="Control/Picker/HBoxContainer/Tab_Eyes"]
position = Vector2(40, 32)
scale = Vector2(3, 3)
texture = ExtResource("5_3lp73")
hframes = 5
frame = 1

[node name="Tab_Mouths" parent="Control/Picker/HBoxContainer" instance=ExtResource("3_i7p62")]
custom_minimum_size = Vector2(80, 64)
layout_mode = 2
theme = ExtResource("10_44y3j")

[node name="Icon3" type="Sprite2D" parent="Control/Picker/HBoxContainer/Tab_Mouths"]
position = Vector2(41, 34)
scale = Vector2(3, 3)
texture = ExtResource("5_3lp73")
hframes = 5
frame = 2

[node name="Tab_Hats" parent="Control/Picker/HBoxContainer" instance=ExtResource("3_i7p62")]
custom_minimum_size = Vector2(80, 64)
layout_mode = 2
theme = ExtResource("10_44y3j")

[node name="Icon4" type="Sprite2D" parent="Control/Picker/HBoxContainer/Tab_Hats"]
position = Vector2(40, 33)
scale = Vector2(3, 3)
texture = ExtResource("5_3lp73")
hframes = 5
frame = 3

[node name="Tab_Colors" parent="Control/Picker/HBoxContainer" instance=ExtResource("3_i7p62")]
custom_minimum_size = Vector2(80, 64)
layout_mode = 2
theme = ExtResource("10_44y3j")

[node name="Icon5" type="Sprite2D" parent="Control/Picker/HBoxContainer/Tab_Colors"]
position = Vector2(40, 33)
scale = Vector2(3, 3)
texture = ExtResource("5_3lp73")
hframes = 5
frame = 4

[node name="ScrollContainer" type="ScrollContainer" parent="Control/Picker"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -226.5
offset_top = 55.0
offset_right = 217.5
offset_bottom = 355.0
grow_horizontal = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3
metadata/_edit_group_ = true

[node name="ColorRect" type="Panel" parent="Control/Picker/ScrollContainer"]
custom_minimum_size = Vector2(444, 500)
layout_mode = 2
theme = ExtResource("10_hjout")

[node name="Body_Items" type="GridContainer" parent="Control/Picker/ScrollContainer/ColorRect"]
layout_mode = 0
offset_left = 21.0
offset_top = 18.0
offset_right = 61.0
offset_bottom = 58.0
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 3
script = ExtResource("4_63lq5")

[node name="Eyes_Items" type="GridContainer" parent="Control/Picker/ScrollContainer/ColorRect"]
layout_mode = 0
offset_left = 21.0
offset_top = 18.0
offset_right = 61.0
offset_bottom = 58.0
columns = 3
script = ExtResource("4_63lq5")

[node name="Mouth_Items" type="GridContainer" parent="Control/Picker/ScrollContainer/ColorRect"]
layout_mode = 0
offset_left = 21.0
offset_top = 18.0
offset_right = 61.0
offset_bottom = 58.0
columns = 3
script = ExtResource("4_63lq5")

[node name="Hat_Items" type="GridContainer" parent="Control/Picker/ScrollContainer/ColorRect"]
layout_mode = 0
offset_left = 21.0
offset_top = 18.0
offset_right = 61.0
offset_bottom = 58.0
columns = 3
script = ExtResource("4_63lq5")

[node name="Color_Items" type="GridContainer" parent="Control/Picker/ScrollContainer/ColorRect"]
layout_mode = 0
offset_left = 21.0
offset_top = 18.0
offset_right = 61.0
offset_bottom = 58.0
columns = 3
script = ExtResource("4_63lq5")

[node name="Panel" type="Panel" parent="Control/Picker"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -227.0
offset_top = 55.0
offset_right = 217.0
offset_bottom = 356.0
grow_horizontal = 2
mouse_filter = 2
theme = ExtResource("10_44y3j")

[node name="Main_Hub_Button" parent="Control" instance=ExtResource("5_b38ie")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.12
anchor_top = 0.866
anchor_right = 0.326
anchor_bottom = 0.907
offset_left = -0.120003
offset_top = 0.215942
offset_right = -15.36
offset_bottom = 56.8559

[node name="BackIcon" type="Sprite2D" parent="Control/Main_Hub_Button"]
position = Vector2(48.32, 48.4241)
scale = Vector2(3, 3)
texture = ExtResource("9_q71ul")

[node name="Money" parent="Control" instance=ExtResource("8_5gl6u")]
layout_mode = 0
offset_left = 44.0
offset_top = 404.0
offset_right = 192.0
offset_bottom = 440.0

[node name="Buy_Modal" type="Panel" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -173.0
offset_top = -364.0
offset_right = 174.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("10_hjout")
script = ExtResource("6_iw5rd")
metadata/_edit_group_ = true

[node name="Buy" type="Button" parent="Control/Buy_Modal"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -111.0
offset_top = -47.0
offset_right = -11.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
text = "$100"

[node name="Close" type="Button" parent="Control/Buy_Modal"]
modulate = Color(1, 0.184314, 0.176471, 1)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -155.0
offset_top = -47.0
offset_right = -55.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
text = "Close"

[node name="Sprite2D" type="Sprite2D" parent="Control/Buy_Modal"]
z_index = 1
position = Vector2(171, 105)
scale = Vector2(2, 2)

[connection signal="button_up" from="Control/Buy_Modal/Buy" to="Control/Buy_Modal" method="_on_button_button_up"]
[connection signal="pressed" from="Control/Buy_Modal/Close" to="Control/Buy_Modal" method="_on_close_pressed"]
